switch to traceur because babel was broken

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
     <script>
-      System.import('main');
+      System.import('main.jsx!');
     </script>
   </body>
 </html>
