--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div id="main"></div>
 
-    <script src="jspm_packages/system.js"></script>
+    <script src="https://jspm.io/system@0.16.7.js"></script>
     <script src="config.js"></script>
     <script>
       System.import('main.jsx!');
