--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://jspm.io/system@0.16.7.js"></script>
     <script src="config.js"></script>
     <script>
-      System.import('main');
+      System.import('app/main');
     </script>
   </body>
 </html>
