--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <body>
     <div id="main"></div>
 
-    <script src="https://jspm.io/system@0.16.7.js"></script>
+    <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
     <script>
-      System.import('app/main');
+      System.import('app/main.js');
     </script>
   </body>
 </html>
